/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package gioco_talpa;

/**
 *
 * @author polenzani.pietro
 */
public class Giocatore {
    
    public void colpisciTalpa(Talpa talpa){
        
    }
}
