---
config:
  layout: elk
---
classDiagram
direction TB
    class Buca {
	    -boolean isOccupata
	    -Talpa talpa
    }

    class Talpa {
	    -int durataUscita
	    -int punteggio
	    -boolean isVisibile
	    +appari()
	    +scompari()
    }

    class Difficolta {
	    facile
	    difficile
	    arcade
    }

    class Form {
	    +Form()
    }

    class Gestore {
	    -int punteggio
	    -Difficolta difficolta
	    -int tempo
	    +avviaGioco()
	    +terminaGioco()
	    +aumentaPunteggio()
    }

    class Giocatore {
	    +colpisci(Talpa talpa)
    }

	<<enum>> Difficolta

	note for Difficolta "arcade non utilizza il tempo"

    Gestore "1" --o "1...n" Buca
    Gestore "1" --o "1...n" Talpa
    Gestore o-- Giocatore
    Gestore ..> Difficolta
    Form -- Gestore